[package]
name = "DiscordBot"
version = "0.1.0"
authors = ["Lin2D2 <linus@thebehrens.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

[dependencies.serenity]
default-features = true
features = ["cache", "framework", "standard_framework", "voice", "http", "rustls_backend"]
version = "0.9.0-rc.4"

[dependencies.tokio]
version = "0.2"
features = ["macros"]